<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainRelative"
    android:background="#1234"
    tools:context="RateUsActivity"
    >
    <include
        android:id="@+id/RateBar"
        layout="@layout/app_bar_layout"
        />
    <RelativeLayout
        android:id="@+id/childRelative"
        android:layout_below="@+id/RateBar"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/background_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/rate_logo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:src="@drawable/tipsoul"
            android:background="@null"
            />
        <TextView
            android:id="@+id/rate_us"
            android:layout_centerHorizontal="true"
            android:text="@string/career_adviser"
            android:layout_marginTop="10dp"
            android:layout_below="@id/rate_logo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/rating_us"
            android:layout_centerHorizontal="true"
            android:text=""
            android:layout_below="@+id/rate_us"
            android:layout_marginBottom="5dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/my_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating_us"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/please_select_some_stars_and_give_your_feedback"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <RatingBar
            android:id="@+id/rate_stars"
            android:layout_below="@id/my_paragraph"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:progressTint="#c800c8"
            android:numStars="5"
            android:stepSize="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:id="@+id/my_linear"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@id/rate_stars"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/mytext"
                android:text="@string/very_bad"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/my_text1"
                android:text="@string/excellent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="110dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <Button
            android:id="@+id/rateBut"
            android:layout_below="@id/my_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/rate_us"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:layout_margin="10dp"
            />
    </RelativeLayout>
</RelativeLayout>