<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="55dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/tipsoul"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="01dp"
                />

            <TextView
                android:id="@+id/logo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/career_adviser"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inputEmail"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/pass_icon_selector"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:id="@+id/inputPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:text="@string/login"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:padding="10dp"
                android:background="@drawable/btn_background"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="05dp"
                />
            <TextView
                android:id="@+id/linkForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="4dp"
                android:gravity="end"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                >
                <ImageView
                    android:id="@+id/facebook"
                    android:src="@drawable/fb_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    />
                <ImageView
                    android:id="@+id/google"
                    android:src="@drawable/google"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    />
                <ImageView
                    android:id="@+id/twitter"
                    android:src="@drawable/twitter"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/linkSingUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="18sp"
                android:text="@string/new_here_create_an_account"
                android:textColor="@color/colorPrimary"
                />
            <TextView
                android:id="@+id/copyrightTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text=""
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>