<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="ForgotPasswordActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <include
        android:id="@+id/fp_toolbar"
        layout="@layout/all_app_bar_layout"
        />
    <LinearLayout
        android:padding="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:src="@drawable/tipsoul"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/career_adviser"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="7dp"
            android:text="@string/security_Info"
            android:textAlignment="center"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/registered_email"
                android:layout_margin="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetPassButton"
            android:text="Reset Password"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:padding="10dp"
            android:background="@color/red"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="By clicking RESET PASSWORD, you'll receive an email to reset your password"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/copyrightTV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:text=""
            />
    </LinearLayout>
</LinearLayout>